ec2.tf
resource "aws_instance" "Ashu" {
  ami           = "ami-0aa7d40eeae50c9a9"
  instance_type = "t2.micro"
}

Test pull
